Puri Ubud - Menambah Heading dan mengganti tulisan cover depan

--- a/public html/2. Puri Ubud.html
+++ b/public html/2. Puri Ubud.html
@@ -9,10 +9,13 @@
   <body>
     <article>
       <Section>
-        <h1>Sejarah Puri Ubud </h1>
+        <h1>Puri Ubud </h1>
       </Section>
       <section>
+        <h2>Sejarah Puri Ubud </h2>
         <p>Pada saat kerajaan Majapahit runtuh di abad ke 15, maka terjadi eksodus besar-besaran dari bangsawan Jawa untuk migrasi ke pulau Bali. Bangsawan dari pulau Jawa inilah yang mendirikan kerajaan Gelgel yang berada di kabupaten Klungkung, kabupaten di bagian tenggara pulau Bali. Kerajaan Gelgel inilah yang memberikan perlindungan kepada para bangsawan dari Jawa yang migrasi ke pulau Bali. Bangsawan dari Jawa yang membawa sistem kasta di Bali.</p>
+      </section>
+      <section>       
         <p>Pada abad ke 17 banyak berdiri kerajaan baru di wilayah pulau Bali, salah satunya di Ubud. Pada abad ke 17, banyak di bangun rumah para bangsawan di Ubud yang di beri nama Puri. Pada periode ini, banyak terjadi peperangan antar kerajaan di Bali, yang memperebutkan kekuasaan akan perluasan daerah.</p>
       </section>
       <Section>
