Tampak Siring - update istana dan cara terbaik ke Tampak Siring

--- a/public html/1. Tampak Siring.html
+++ b/public html/1. Tampak Siring.html
@@ -51,6 +51,34 @@
           <Untuk>mengatasi mata air beracun dari Mayadenawa, Dewa Indra menciptakan mata air penawar racun. Mata air ini yang bernama Tirta Empul (air suci), oleh karena itu Pura yang memiliki mata air ini disebut dengan nama pura Tirta Empul. Hutan yang digunakan untuk Mayadenawa melarikan diri, dengan posisi kakinya dimiringkan inilah yang sekarang menjadi kawasan wisata Tampak Siring. Lihat disini, lokasi dari Pura Tirta Empul di Google Map.</Untuk>
         </p>
       </section>
+      <section>
+        <h2>Istana Tampak Siring </h2>
+        <h3>Tempat Wisata Di Bali</h3>
+      </section>
+      <section>
+        <p>selain pura,di tempat wisata ini terdapat istana kepresidenan yang didirikan oleh presiden pertama indonesia,IR soekarno sebagai tempat peristirahatan beliau saat berkunjung ke Bali. Istana tampak Siring dibangun dari tahun 1957 - 1960.</p>
+      </section>
+      <section>
+        <p>Pembangunan istana kepresidenan Tampaksiring dilakukan secara perlahan-lahan dan mengalami tahapan. Artiktek yang mendesain istana kepresidenan adalah RM Soedarsono. Bangunan awal yang di bangun pada tahun 1957 adalah wisma Merdeka dan wisma Yudistira.</p>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/Tampak Siring -4.jpg" class="big"></section>
+      <section>
+        <p>Istana Tampak Siring mengalami penambahan bangunan pada tahun 2003, yang diperuntukan untuk KTT ASEAN Summit XIV. Penambahan bangunan pada Istana Tampak Siring, berupa bangunan untuk sarana konfrensi dan resepsi tamu negara. Balai Wantilan yang ada di Istana Tampak Siring, juga mengalami renovasi untuk acara pertujukan kesenian tamu negara.</p>
+        <p>Tujuan dari pembangunan istana kepresidenan ini, sebagai tempat Presiden, keluarga presiden dan tamu negara beristirahat saat berkunjung ke pulau Bali.</p>
+      </section>
+      <section>
+        <h2>Cara Terbaik ke Pura Tirta Empul Tampak Siring</h2>
+      </section>
+      <section>
+        <p>Jika anda liburan ke Bali, sebaiknya anda meluangkan waktu untuk datang ke kawasan wisata pura Tirta Empul dan berkunjung ke istana presiden. Banyak pengalaman dan hal baru yang akan anda ketahui, jika anda berwisata ke pura Tirta Empul. Jika anda menyukai objek wisata Tirta Empul, maka anda pasti akan menyukai objek wisata pura Taman Ayun Mengwi.</p>
+        <p>Tentunya saat ingin wisata ke pura Tirta Empul, anda pastinya akan memerlukan sarana transfortasi. Saat ini di Bali belum ada sarana transfortasi umum, dari tempat wisata Bali selatan menuju ke kawasan wisata pura Tirta Empul.</p>
+      </section>
+      <section>
+        <p>Jika anda menginap di kawasan wisata Ubud, menggunakan taksi salah satu saranan transfortasi yang dapat anda gunakan. Jika anda berencana mengunjungi lebih dari satu tempat wisata di Bali, tidak hanya ke pura Tirta Empul. Maka menggunakan jasa Bali sewa mobil supir salah satu cara terbaik untuk mendapatkan sarana transportasi murah</p>
+      </section>
+      <section>      
+        <p>Selain menyediakan jasa sewa mobil murah di Bali dengan supir, kami juga menyediakan jasa paket wisata di Bali untuk wisata ke pura Tirta Empul. Sebagian besar pelanggan kami yang memilih paket wisata saat liburan di Bali, tidak ingin ribet untuk memikirkan akan, biaya tiket masuk, biaya parkir kendaraan, biaya bahan bakar minyak serta biaya makan. Selain tidak ribet, dengan membeli paket wisata ke Bali, total biaya liburan akan jauh lebih murah dari pada anda tidak membeli paket tour.</p>
+      </section>
     </article>
     <script src="build/build.js"></script>
   </body>
