Puri Ubud - Penambahan Gambar

--- a/public html/2. Puri Ubud.html
+++ b/public html/2. Puri Ubud.html
@@ -9,7 +9,7 @@
   <body>
     <article>
       <Section>
-        <h1>Puri Ubud </h1>
+        <h1>Puri Ubud </h1><img src="images/istana-puri-saren-ubud-bali.jpg">
       </Section>
       <section>
         <h2>Sejarah Puri Ubud </h2>
