Tari Kecak Ubud - Menambah isi dan memberi contoh gambar

--- a/public html/4. Tari Kecak Ubud.html
+++ b/public html/4. Tari Kecak Ubud.html
@@ -12,22 +12,19 @@
         <h1>Tari Kecak Ubud</h1><img src="images/Tari-Kecak-Ubud.jpg">
       </Section>
       <section>
-        <h2></h2>
-        <p></p>
+        <h3>Gambaran Tari Kecak Api Ubud</h3><img src="images/Tari-Kecak-Ubud-1.jpg">
       </section>
       <section>
-        <h2></h2>
-        <p></p>
+        <p>Untuk mencari lokasi dari tiap-tiap pementasan dari tarian kecak di Ubud, tentunya bagi anda yang tidak terlalu faham akan jalan-jalan di Ubud, maka akan kesulitan. Selain itu, jika anda memutuskan membawa kendaraan sendiri, untuk mencari tempat parkir di kawasan objek wisata Ubud, akan sangat susah. Ini dikarenakan sangat jarang tersedia lahan parkir dan sebagian besar, orang parkir dipinggir jalan dan lebih cendrung penuh dan susah untuk mencari.</p>
       </section>
       <section>       
-        <p></p>
+        <p>Oleh sebab itu, jika anda berencana wisata ke Ubud dan memutuskan untuk menonton tari kecak api di Ubud, sebaiknya menggunakan jasa sewa mobil dengan driver di Bali. Dengan cara sewa mobil di Bali dengan supir, anda tidak perlu susah untuk mencari lokasi pementasan dan tempat parkir mobil</p>
       </section>
       <Section>
-        <P></P>
+        <P>Selain di Ubud, tempat pementasan tarian kecak yang paling populer adalah di pura Uluwatu. Kenapa tarian kecak di Pura Uluwatu diminati oleh wisatawan? Hal ini dikarenakan pada saat menonton tari kecak di Uluwatu, wisatawan dapat menikmati matahari terbenam, sebagai latar belakang.</P>
       </Section>
       <section>
-        <h2></h2>
-        <p></p>
+        <h3>Gambaran Tari Kecak Api Ubud di Pura Uluwatu</h3><img src="images/tari-kecak-di-pura-uluwatu.jpg">
       </section>
       <Section>
         <P></P>
