--- a/public html/3. Pura Taman Saraswati.html
+++ b/public html/3. Pura Taman Saraswati.html
@@ -19,21 +19,25 @@
         <h2>Penjelasan Pura Taman Saraswati (cont)</h2>
         <p>Selain itu, Ubud juga sangat terkenal akan wisata arung jeram yang lebih dikenal dengan nama Ayung rafting Ubud.Desa Ubud, sangat terkenal akan wisata seni dan budaya dan setiap hari di tempat wisata Ubud, diselenggarakan pentas kesenian Bali. Salah satunya adalah pementasan tari kecak Bali.Ubud merupakan salah satu tempat terbaik untuk menonton tari kecak di Bali, selain menonton tari kecak di Uluwatu. Salah satu tempat pementasan tarian kecak di Ubud adalah di Pura Taman Saraswati Ubud.</p>
       </section>
-      <section>       
-        <p></p>
+      <section>
+        <h2>Menonton Tari Kecak Di Pura Taman Saraswati Ubud</h2>
+        <p>Sebelum kami menuliskan tentang tari kecak di Pura Taman Saraswati Ubud. Ada baiknya kami menuliskan sedikit tentang pura Pura Taman Saraswati Ubud.</p>
       </section>
       <Section>
-        <P></P>
+        <P>Seperti yang anda tahu, pura adalah tempat suci agama hindu di Bali dan pura Taman Saraswati Ubud adalah salah satunya. Pura ini, sesuai dengan namanya adalah tempat pemujaan Dewi Saraswati (Dewi Pengetahuan). Lokasi dari pura ini, terdapat di jalan raya Ubud.</P>
+        <p>Pura Taman Saraswati Ubud, sedikit berbeda dari pura-pura lain yang ada di Bali. Pura ini memiliki kolam yang banyak terdapat bunga teratai dan kolam teratai inilah, daya tarik utama dari pura Saraswati.</p>
+        <p>Jika anda menyukai melihat seni ukir khas Ubud Bali, disinilah tempatnya untuk melihat. Hampir setiap bangunan pura, terdapat seni ukir dari para seniman Ubud.</p>
       </Section>
       <section>
         <h2>Pura Kolam Bunga Teratai</h2>
         <p>Pura ini memiliki panggung pemantasan tari kecak dan panggung di kelilingi oleh kolam teratai. Saat anda liburan di Bali dan berencana untuk menonton tarian kecak Ubud di Pura Taman Saraswati, sebaiknya anda memperhatikan terlebih dahulu, jadwal pementasan tarian kecak di Pura Taman Saraswat Ubud. Tidak setiap hari, diadakan pementasan tarian kecak di pura ini.</p>
       </section>
       <Section>
-        <P></P>
+        <h1>Jadwal Pementasan Tari Kecak Di Pura Taman Saraswati Ubud</h1>
       </Section>
       <Section>
-        <p></p>
+        <p>Hari selasa dan hari kamis, mulai pertunjukan jam 19:30, dengan harga tiket Rp 75.000 per orang. Pertunjukan tarian kecak di bawakan oleh group tari Sandhi Suara.</p>
+        <p>Bagi anda yang ingin menonton tarian kecak di Ubud tidak akan susah, walupun anda tidak datang pada hari selasa atau kamis. Setiap hari diadakan pementasan tarian kecak di Ubud, hanya tempat pementasannya yang berbeda-beda.</p><p style="color:red"> Lihat di sini <a href="http://www.rentalmobilbali.net/tari-kecak-ubud/">Jadwal Tari Kecak Ubud.</a></p>
       </Section>
       <Section>
         <p></p>
