Jadwal Tari Kecak Ubud

--- a/public html/4. Tari Kecak Ubud.html
+++ b/public html/4. Tari Kecak Ubud.html
@@ -27,17 +27,71 @@
         <h3>Gambaran Tari Kecak Api Ubud di Pura Uluwatu</h3><img src="images/tari-kecak-di-pura-uluwatu.jpg">
       </section>
       <Section>
-        <P></P>
+        <h2>Jadwal & Harga Tiket Tari Kecak Ubud</h2>
+        <p>Jika anda ingin nonton tari kecak api di Ubud, pementasan tarian kecak hanya dilakukan pada saat malam hari. Pertunjukan tari kecak Ubud, biasanya dimulai pada jam 19:00. Di Ubud ada dua tempat terkenal untuk menonton tari kecak. Tempat pertujukan tari kecak Ubud dipentaskan antara lain di Pura Dalem Ubud dan Padang Tegal Kaja Ubud. Jadwal pementasan dituliskan di slide berikutnya</p>
       </Section>
       <Section>
-        <p></p>
+        <h3>Hari Minggu</h3>
+        <table border="0" cellpadding="5" cellspacing="10">
+          <tr align="left">
+            <td>Lokasi Pentas</td>
+            <td>Jam</td>
+            <td>Oleh </td>
+            <td>Harga Tiket</td>
+          </tr>
+          <tr align="left">
+            <td>Padang Tegal Kaja</td>
+            <td>19:00</td>
+            <td>Trene Jenggala</td>
+            <td>Rp. 75.000,-</td>
+          </tr>
+          <tr align="left">
+            <td>Pura Batukaru</td>
+            <td>19:30</td>
+            <td>Desa Adat Sambahan </td>
+            <td>Rp. 75.000,-</td>
+          </tr>
+        </table>
       </Section>
       <Section>
-        <p></p>
+        <h3>Hari Senin</h3>
+        <table border="0" cellpadding="5" cellspacing="10">
+          <tr align="left">
+            <td>Lokasi Pentas</td>
+            <td>Jam</td>
+            <td>Oleh </td>
+            <td>Harga Tiket</td>
+          </tr>
+          <tr align="left">
+            <td>Desa Junjungan</td>
+            <td>18:30</td>
+            <td>Desa Adat Junjungan</td>
+            <td>Rp. 75.000,-</td>
+          </tr>
+          <tr align="left">
+            <td>Pura Dalem Ubud</td>
+            <td>19:30</td>
+            <td>Adat Ubud Kaja</td>
+            <td>Rp. 80.000,-</td>
+          </tr>
+        </table>
       </Section>
       <Section>
-        <h2></h2>
-        <p></p>
+        <h3>Hari Selasa</h3>
+        <table border="0" cellpadding="5" cellspacing="10">
+          <tr align="left">
+            <td>Lokasi Pentas</td>
+            <td>Jam</td>
+            <td>Oleh </td>
+            <td>Harga Tiket</td>
+          </tr>
+          <tr align="left">
+            <td>Jaba Pura Taman Sari</td>
+            <td>19:00</td>
+            <td>Sandhi Suara</td>
+            <td>Rp. 75.000,-</td>
+          </tr>
+        </table>
       </Section>
       <Section>
         <p></p>
