--- a/public html/3. Pura Taman Saraswati.html
+++ b/public html/3. Pura Taman Saraswati.html
@@ -33,24 +33,24 @@
         <p>Pura ini memiliki panggung pemantasan tari kecak dan panggung di kelilingi oleh kolam teratai. Saat anda liburan di Bali dan berencana untuk menonton tarian kecak Ubud di Pura Taman Saraswati, sebaiknya anda memperhatikan terlebih dahulu, jadwal pementasan tarian kecak di Pura Taman Saraswat Ubud. Tidak setiap hari, diadakan pementasan tarian kecak di pura ini.</p>
       </section>
       <Section>
-        <h1>Jadwal Pementasan Tari Kecak Di Pura Taman Saraswati Ubud</h1>
+        <h2>Jadwal Pementasan Tari Kecak Di Pura Taman Saraswati Ubud</h2>
       </Section>
       <Section>
         <p>Hari selasa dan hari kamis, mulai pertunjukan jam 19:30, dengan harga tiket Rp 75.000 per orang. Pertunjukan tarian kecak di bawakan oleh group tari Sandhi Suara.</p>
         <p>Bagi anda yang ingin menonton tarian kecak di Ubud tidak akan susah, walupun anda tidak datang pada hari selasa atau kamis. Setiap hari diadakan pementasan tarian kecak di Ubud, hanya tempat pementasannya yang berbeda-beda.</p><p style="color:red"> Lihat di sini <a href="http://www.rentalmobilbali.net/tari-kecak-ubud/">Jadwal Tari Kecak Ubud.</a></p>
       </Section>
       <Section>
-        <p></p>
+        <p>Bagi anda yang tidak memilih hotel tempat menginap di Ubud dan berencana untuk wisata ke Ubud, ada beberapa cara yang dapat anda lakukan untuk dapat berwisata ke objek wisata Ubud.</p>
+        <h3>1. Mencari Jasa Sewa Mobil Dengan Supir Di Bali</h3>
+        <p>Dengan cara menyewa mobil + driver di Bali, akan sangat memudahkan anda untuk berpergian dari satu tempat wisata di Bali ke tempat wisata yang lain, tanpa memikirkan mencari tempat parkir, mencari jalan pintas, serta memikirakan tetang kemacetan jalanan.</p>
       </Section>
       <Section>
-        <h2></h2>
-        <p></p>
+        <p>Objek wisata di Ubud, sangat jarang tersedia tempat parkir mobil, hampir sebagian besar, orang parkir di penggir jalan dan sangat sering penuh. Karena hal ini, kami sangat menyarankan anda untuk mencari penyedia jasa rent car di Bali dengan supir.</p>
       </Section>
       <Section>
-        <p></p>
-      </Section>
-      <Section>
-        <p></p>
+        <h3>2. Membeli Paket Wisata Murah Di Bali</h3>
+        <p>Karena Ubud sangat terkenal dan mendapat permintaan yang sangat tinggi dari wisatawan, maka sangat banyak penyedia usaha perjalanan wisata yang menyediakan Ubud tour.</p>
+        <p>Kelebihan dari membeli paket tour murah di Bali, selain anda mendapat kelebihan layanan jasa sewa mobil dengan supir, jadwal tour anda akan terencana dan terarah. Selain itu, budget liburan anda akan terencana. </p>
       </Section>
     </article>
     <script src="build/build.js"></script>
