--- a/public html/4. Tari Kecak Ubud.html
+++ b/public html/4. Tari Kecak Ubud.html
@@ -15,7 +15,7 @@
         <h3>Gambaran Tari Kecak Api Ubud</h3><img src="images/Tari-Kecak-Ubud-1.jpg">
       </section>
       <section>
-        <p>Untuk mencari lokasi dari tiap-tiap pementasan dari tarian kecak di Ubud, tentunya bagi anda yang tidak terlalu faham akan jalan-jalan di Ubud, maka akan kesulitan. Selain itu, jika anda memutuskan membawa kendaraan sendiri, untuk mencari tempat parkir di kawasan objek wisata Ubud, akan sangat susah. Ini dikarenakan sangat jarang tersedia lahan parkir dan sebagian besar, orang parkir dipinggir jalan dan lebih cendrung penuh dan susah untuk mencari.</p>
+        <p>Untuk mencari lokasi dari tiap-tiap pementasan dari tarian kecak di Ubud, tentunya bagi anda yang tidak terlalu paham akan jalan-jalan di Ubud, maka akan kesulitan. Selain itu, jika anda memutuskan membawa kendaraan sendiri, untuk mencari tempat parkir di kawasan objek wisata Ubud, akan sangat susah. Ini dikarenakan sangat jarang tersedia lahan parkir dan sebagian besar, orang parkir dipinggir jalan dan lebih cendrung penuh dan susah untuk mencari.</p>
       </section>
       <section>       
         <p>Oleh sebab itu, jika anda berencana wisata ke Ubud dan memutuskan untuk menonton tari kecak api di Ubud, sebaiknya menggunakan jasa sewa mobil dengan driver di Bali. Dengan cara sewa mobil di Bali dengan supir, anda tidak perlu susah untuk mencari lokasi pementasan dan tempat parkir mobil</p>
@@ -24,12 +24,8 @@
         <P>Selain di Ubud, tempat pementasan tarian kecak yang paling populer adalah di pura Uluwatu. Kenapa tarian kecak di Pura Uluwatu diminati oleh wisatawan? Hal ini dikarenakan pada saat menonton tari kecak di Uluwatu, wisatawan dapat menikmati matahari terbenam, sebagai latar belakang.</P>
       </Section>
       <section>
-        <h3>Gambaran Tari Kecak Api Ubud di Pura Uluwatu</h3><img src="images/tari-kecak-di-pura-uluwatu.jpg">
+        <h3>Gambaran Tari Kecak Api Ubud di Pura Uluwatu</h3><img src="images/tari-kecak-di-pura-uluwatu.jpg" width="600">
       </section>
-      <Section>
-        <h2>Jadwal & Harga Tiket Tari Kecak Ubud</h2>
-        <p>Jika anda ingin nonton tari kecak api di Ubud, pementasan tarian kecak hanya dilakukan pada saat malam hari. Pertunjukan tari kecak Ubud, biasanya dimulai pada jam 19:00. Di Ubud ada dua tempat terkenal untuk menonton tari kecak. Tempat pertujukan tari kecak Ubud dipentaskan antara lain di Pura Dalem Ubud dan Padang Tegal Kaja Ubud. Jadwal pementasan dituliskan di slide berikutnya</p>
-      </Section>
       <Section>
         <h3>Hari Minggu</h3>
         <table border="0" cellpadding="5" cellspacing="10">
