Tari Kecak Ubud - update sampai selesai jade dan htmlnya

--- a/public html/4. Tari Kecak Ubud.html
+++ b/public html/4. Tari Kecak Ubud.html
@@ -90,10 +90,119 @@
         </table>
       </Section>
       <Section>
-        <p></p>
+        <h3>Hari Rabu</h3>
+        <table border="0" cellpadding="5" cellspacing="10">
+          <tr align="left">
+            <td>Lokasi Pentas</td>
+            <td>Jam</td>
+            <td>Oleh </td>
+            <td>Harga Tiket</td>
+          </tr>
+          <tr align="left">
+            <td>Padang Tegal Kaja</td>
+            <td>19:00</td>
+            <td>Trene Jenggala</td>
+            <td>Rp. 75.000,-</td>
+          </tr>
+          <tr align="left">
+            <td>Pura Dalem Taman Kaja</td>
+            <td>19:30</td>
+            <td>Desa Adat Taman Kaja</td>
+            <td>Rp. 75.000,-</td>
+          </tr>
+          <tr align="left">
+            <td>Pura Batu Karu</td>
+            <td>19:30</td>
+            <td>Desa Adat Ubud Tengah (Penari Wanita)</td>
+            <td>Rp. 80.000,-</td>
+          </tr>
+        </table>
       </Section>
       <Section>
-        <p></p>
+        <h3>Hari Kamis</h3>
+        <table border="0" cellpadding="5" cellspacing="10">
+          <tr align="left">
+            <td>Lokasi Pentas</td>
+            <td>Jam</td>
+            <td>Oleh </td>
+            <td>Harga Tiket</td>
+          </tr>
+          <tr align="left">
+            <td>Puri Agung Peliatan</td>
+            <td>18:45</td>
+            <td>Semara Madya</td>
+            <td>Rp. 75.000,- / Orang</td>
+          </tr>
+          <tr align="left">
+            <td>Puri Jaba Pura Taman Sari</td>
+            <td>19:30</td>
+            <td>Sandhi Suara</td>
+            <td>Rp. 75.000,- / Orang</td>
+          </tr>
+          <tr align="left">
+            <td>Pura Batu Karu</td>
+            <td>19:30</td>
+            <td>Desa Adat Sambahan</td>
+            <td>Rp. 75.000,- / Orang</td>
+          </tr>
+        </table>
+      </Section>
+      <Section>
+        <h3>Hari Jumat</h3>
+        <table border="0" cellpadding="5" cellspacing="10">
+          <tr align="left">
+            <td>Lokasi Pentas</td>
+            <td>Jam</td>
+            <td>Oleh </td>
+            <td>Harga Tiket</td>
+          </tr>
+          <tr align="left">
+            <td>Pura Padang Kertha</td>
+            <td>19:00</td>
+            <td>Padang Subadra</td>
+            <td>Rp. 75.000,-</td>
+          </tr>
+          <tr align="left">
+            <td>Pura Dalem Ubud</td>
+            <td>19:30</td>
+            <td>Desa Adat Ubud Kaja</td>
+            <td>Rp. 80.000,-</td>
+          </tr>
+        </table>
+      </Section>
+      <Section>
+        <h3>Hari Sabtu</h3>
+        <table border="0" cellpadding="5" cellspacing="10">
+          <tr align="left">
+            <td>Lokasi Pentas</td>
+            <td>Jam</td>
+            <td>Oleh </td>
+            <td>Harga Tiket</td>
+          </tr>
+          <tr align="left">
+            <td>Padang Tegal Kaja</td>
+            <td>19:00</td>
+            <td>Trene Jenggala</td>
+            <td>Rp. 75.000,-</td>
+          </tr>
+          <tr align="left">
+            <td>Pura Dalem Taman Kaja</td>
+            <td>19:30</td>
+            <td>Desa Adat Taman Kaja</td>
+            <td>Rp. 75.000,-</td>
+          </tr>
+        </table>
+      </Section>
+      <Section>
+        <p>Selain jadwal rutin dari tari kecak Ubud diatas, ada jadwal tari kecak lain yang hanya diadakan pada saat bulan purnama. Tempat pementasan pada saat bulan purnama adanya di Museum Arma Ubud, jadwal pentas pada jam 18:45, dengan harga tiket Rp. 100.000.</p>
+        <p>Mohon dicatat, harga tiket dapat berubah sewaktu-waktu.</p>
+      </Section>
+      <Section>
+        <p>Untuk mencari lokasi dari tiap-tiap pementasan dari tarian kecak di Ubud, tentunya bagi anda yang tidak terlalu faham akan jalan-jalan di Ubud, maka akan kesulitan. Selain itu, jika anda memutuskan membawa kendaraan sendiri, untuk mencari tempat parkir di kawasan objek wisata Ubud, akan sangat susah. Ini dikarenakan sangat jarang tersedia lahan parkir dan sebagian besar, orang parkir dipinggir jalan dan lebih cendrung penuh dan susah untuk mencari.</p>
+      </Section>
+      <Section>
+        <p>Oleh sebab itu, jika anda berencana wisata ke Ubud dan memutuskan untuk menonton tari kecak api di Ubud, sebaiknya menggunakan jasa sewa mobil + driver di Bali. Dengan cara sewa mobil di Bali dengan supir, anda tidak perlu susah untuk mencari lokasi pementasan dan tempat parkir mobil.</p>
+        <p>Selain di Ubud, tempat pementasan tarian kecak yang paling populer adalah di pura Uluwatu. Kenapa tarian kecak di Pura Uluwatu diminati oleh wisatawan? Hal ini dikarenakan pada saat menonton tari kecak di Uluwatu, wisatawan dapat menikmati matahari terbenam, sebagai latar belakang.</p>
       </Section>
     </article>
     <script src="build/build.js"></script>
