--- a/public html/6. Ayung Rafting.html
+++ b/public html/6. Ayung Rafting.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Tari Kecak Ubud</title>
+    <title>Ayung Rafting</title>
     <link rel="stylesheet" type="text/css" href="build/build.css">
   </head>
   <body>
