--- a/public html/8. Ubud Monkey Forest.html
+++ b/public html/8. Ubud Monkey Forest.html
@@ -10,11 +10,16 @@
     <article>
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">
         <h1>Ubud Monkey Forest</h1>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
         <p>Ubud sangat terkenal sampai kemancanegara akan seni, alam dan budaya. Saat anda mendengar salah satu nama objek wisata di Bali, yaitu Ubud monkey forest. Walaupun anda belum pernah berlibur ke objek wisata ini, anda pasti tahu dari namanya, bahwa anda akan dapat melihat kera di salah satu objek wisata Ubud ini</p>
       </section>
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">       
         <h2>Lokasi Objek Wisata Ubud Monkey Forest  </h2>
-        <p>Tentunya banyak hal yang dapat anda lakukan di Ubud. Seperti melihat sawah terasering di Tegalalang Ubud, wisata rafting di Ubud, menonton tari kecak Ubud dan liburan ke museum kesenian yang sangat banyak terdapat di Ubud. Ubud monkey forest salah satu objek wisata di Ubud yang wajib dikunjungi, jika anda sedang berlibur di Bali. Merupakan kawasan hutan lindung dan di dalam hutan ini, terdapat pura sakral umat Hindu Bali. Nama asli objek wisata Ubud monkey forest adalah Mandala Wisata Wenara Wana, tapi lebih dikenal dengan nama Sacred Monkey Forest Sanctuary.</p>
+        <p>Tentunya banyak hal yang dapat anda lakukan di Ubud. Seperti melihat sawah terasering di Tegalalang Ubud, wisata rafting di Ubud, menonton tari kecak Ubud dan liburan ke museum kesenian yang sangat banyak terdapat di Ubud.</p>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">       
+        <p>Ubud monkey forest salah satu objek wisata di Ubud yang wajib dikunjungi, jika anda sedang berlibur di Bali. Merupakan kawasan hutan lindung dan di dalam hutan ini, terdapat pura sakral umat Hindu Bali. Nama asli objek wisata Ubud monkey forest adalah Mandala Wisata Wenara Wana, tapi lebih dikenal dengan nama Sacred Monkey Forest Sanctuary.</p>
       </section>
       <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/ubudMKF.jpg" class="big"></section>
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">
@@ -27,6 +32,26 @@
         <p>Lihat disini, <a href = "http://www.rentalmobilbali.net/harga-tiket-masuk-wisata-di-bali/">Daftar Harga Tiket Masuk Objek Wisata Di Bali</a></p>
       </section>
       <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/ubudMKF2.jpg" class="big"></section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <p>Di saat anda memasuki kawasan objek wisata monkey forest Bali, udara sejuk akan terasa, pepohonan hijau yang tinggi dan hijau, akan tampak dari areal parkir. Sebelum anda memasuki pintuk masuk, disebelah kiri dari pintu masuk, akan terdapat loket tiket, di loket inilah anda akan membayar tiket masuk. Di pintu masuk, anda akan melihat beberapa pedagang pisang yang dapat anda beli, jika ingin memberikan makan kera-kera. Jam buka dari tempat wisata mongkey forest di Ubud, dari jam 08:00 s/d 18:00 waktu Bali.</p>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <p>Waktu terbaik untuk berkunjung ke Ubud Monkey Forest adalah pada jam 14:00. Karena hampir sebagian dari kera-kera sudah kenyang, mendapatkan makanan dari pengunjung sebelumnya. Hal ini membuat sifat agresif kera-kera sedikit berkurang. Di dalam objek wisata monkey forest di Ubud, banyak sekali terdapat petugas yang mengawasi kera-kera. Jadi pengunjung merasa nyaman dari kera-kera yang sedikit agresif.</p>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <h3 class="bullet">Ada beberapa tips yang sebaiknya anda lakukan jika mengunjungi tempat wisata Ubud Monkey Forest</h3>
+        <ol>
+          <li>Taruhlah barang berharga anda di dalam tas, seperti anting-anting, selendang, kacamata ataupun handphone. Jika anda ingin foto-foto, selalu pegang erat kamera anda. Barang-barang tersebut akan menarik minat dari kera-kera untuk mengambil.</li>
+          <li>Berjalanlah di jalan yang sudah disediakan, jangan berjalan melewati areal dari jalan yang sudah disediakan. Hal ini akan membuat kera-kera agresif, karena kera-kera mengira anda memasuki kawasan mereka.</li>
+          <li>Jangan memukul atau menyakiti kera-kera, hal ini akan membuat kera-kera yang lain akan menyerang anda.</li>
+        </ol>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <h1>Objek Wisata Di Bali Favorit Wisatawan</h1>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <p>Selain monkey forest di Ubud, pulau Bali juga memiliki objek wisata lain untuk dapat melihat kera-kera. Tempat wisata tersebut antara lain, <a href = "http://www.rentalmobilbali.net/pura-uluwatu/">Pura Uluwatu</a>, <a href = "http://www.rentalmobilbali.net/alas-kedaton/">Alas Kedaton</a>, Pura Pulaki. Mudah-mudahan informasi yang kami tuliskan di situs ini, berguna bagi anda yang berencana berlibur di Bali dengan mengunjungi monkey forest Bali di Ubud.</p>
+      </section>
     </article>
   </body>
   <script src="build/build.js"></script>
