--- a/public html/6. Ayung Rafting.html
+++ b/public html/6. Ayung Rafting.html
@@ -23,8 +23,21 @@
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">
         <p>Masing-masing boat menampung 4 orang peserta ditambah 1 orang instruktur. Selama kurang lebih 2 jam anda akan mencoba mengarungi derasnya sungai Ayung yang menempuh jarak kurang lebih 12 km. Dalam perjalanan peserta dapat menikmati jeram-jeram sungai Ayung dan berfoto-foto di batu batu pinggir sungai yang latar belakangnya ukir-ukiran sepanjang ratusan meter. Hal ini mencerminkan kreatifitas seni yang tinggi dari orang Bali sehingga menjadi ciri khas dari obyek wisata rafting di sungai Ayung.</p>
       </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/arung-jeram-sungai-ayung.jpg"></section>
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">
-        <P></P>
+        <P>Bagi anak-anak yang ingin mencoba Ayung Rafting, tidak perlu khawatir karena airnya tidak terlalu deras dan jeramnya tidak menukik. Namun harus tetap ditemani orang tua masing-masing. Olahraga ini sangat seru dan menantang. Apalagi dilakukan beramai ramai bersama keluarga dan teman. </P>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <P>Setelah mengarungi air sungai Ayung sepanjang 12 km, peserta akan sampai di stopping point. Di tempat ini disediakan tempat beristirahat, ruang ganti, kamar mandi, dan handuk gratis. Kegiatan akan dilanjutkan dengan menikmati makan siang dengan menu buffet yang telah disediakan. Obyek wisata Ayung Rafting ramai dikunjungi wisatawan dari dalam negeri maupun mancanegara. Terutama menjelang Natal, Tahun Baru, liburan sekolah dan hari libur nasional lainnya. </P>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <h3>Payung Rafting</h3><img src="images/Payung-Rafting-Ubud.jpg">
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <h3>Bali Adventure Rafting</h3><img src="images/bali-adventure-rafting-ubud1.jpg">
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <h3>Sobek Rafting Ayung</h3><img src="images/sobek-rafting-ayung-ubud.jpg">
       </section>
     </article>
   </body>
