Arma Musemum Ubud

--- a/public html/9. Arma Museum Ubud.html
+++ b/public html/9. Arma Museum Ubud.html
@@ -35,6 +35,19 @@
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">
         <P>Jika anda memutuskan untuk mengunjungi musem Arma, jangan lupa untuk membawa kamera. Begitu banyak hal yang dapat anda abadikan dengan foto di tempat wisata ini.</P>
       </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <h3>Biaya Tiket Masuk Ke Museum Arma Ubud & Jam Buka</h3>
+        <p>Tiket masuk akan dikenakan sebesar Rp 50.000 jika anda mengunjungi museum Arma Ubud. Biaya tiket masuk sebesar 50 ribu rupiah, sudah termasuk minuman teh dan kopi yang anda dapat nikmati di salah satu cafe di museum ini. Jam buka dari museum Arma Ubud, dari jam 09:00 - jam 18:00 setiap hari, tentunya dengan waktu Bali.</p>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <h3>Koleksi Lukisan Arma Museum Ubud</h3>
+        <P>Museum Arma Ubud, memiliki lukisan dari berbagai aliran seni lukis, seperti:</P>
+        <p>1.Lukisan Kamasan.</p>
+        <p>2.Lukisan Pre War.</p>
+        <p>3.Lukisan dari orang Eropa yang tinggal di Bali.</p>
+        <p>4.Lukisan dengan aliran modern traditional.</p>
+        <p>Untuk lebih jelas akan koleksi lukisan di museum Arma, anda dapat melihatnya di link di bawah.</p>
+      </section>
     </article>
   </body>
   <script src="build/build.js"></script>
