Air Terjun Tegenungan - sampai habis

--- a/public html/12. Air Terjun Tegenungan.html
+++ b/public html/12. Air Terjun Tegenungan.html
@@ -32,6 +32,21 @@
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">
         <p>Air terjun Tegenungan, memiliki tinggi kira-kira 4 meter, tapi memiliki debit air yang lumayan banyak. Air di lokasi air terjun Kemenuh sangat jernih dan cocok buat anda yang sekedar ingin bermain air atau mandi. Di lokasi air terjun ini, anda juga dapat melihat pura dan pancoran air yang berasal dari mata air.</p>
       </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/pancoran-air-terjun-kemenuh.jpg" width="500"></section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <h2>Fasilitas, Tiket Masuk & Tempat Parkir</h2>
+        <p>Objek wisata air terjun Tegenungan kurang mendapat perawatan, jadi terkesan kurang rapi dan bersih. Hal ini akan terlihat pada saat anda sudah sampai di tempat parkir kendaraan. Di sepanjang areal sungai, juga banyak pohon yang telah ditebang dan ada sampah yang berserakan.</p>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <p>Khusus di areal parkir, anda akan melihat adanya warung-warung sederhana yang menjual makanan dan minuman. Untuk tiket masuk anda akan tidak akan dikenakan biaya. Dulu saat di tempat ini ada wisata bunjee jumping, anda akan dikenakan biaya tiket masuk sebesar Rp 4.000 untuk dewasa dan anak-anak sebesar Rp 2.000. Wisata bunjee jumping saat ini sudah tidak ada lagi di lokasi wisata air terjun Kemenuh.</p>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <h2>Transfortasi Wisata Di Bali</h2>
+        <p>Di objek wisata air terjun Tegenungan tidak ada sarana transfortasi umum, jadi anda harus membawa kendaraan anda sendiri atau dengan mencari penyedia jasa Bali rent car. Bagi anda yang tidak terbiasa mengemudi di jalanan yang agak rusak dan kecil, maka kami sarankan anda untuk mencari jasa sewa mobil di Bali dengan supir.</p>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <p>Objek wisata air terjun Tegenungan sangat dekat dengan lokasi dari pasar seni Sukawati, di pasar ini anda dapat membeli beranekaragam oleh-oleh khas Bali yang dijual murah. Jika anda pintar dalam menawar, maka anda akan jauh mendapatkan harga murah untuk oleh-oleh khas Bali.</p>
+      </section>
     </article>
   </body>
   <script src="build/build.js"></script>
