--- a/public html/14. Museum Puri Lukisan Ubud.html
+++ b/public html/14. Museum Puri Lukisan Ubud.html
@@ -26,6 +26,11 @@
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">
         <p>Museum ini buka dari jam 09:00 - 18:00 (waktu Bali) dan buka setiap hari, kecuali pada hari raya Nyepi. Tiket masuk akan dikenakan sebesar Rp 75.000 per orang dewasa. Harga tiket masuk sudah termasuk minuman yang menyegarkan dan kue. Untuk anak-anak yang berumur di bawah 15 tahun dan ditemani oleh orang tua, tidak akan dikenakan biaya tiket masuk.</p>
       </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <h2>Kolesi Seni Museum Puri Lukisan</h2>
+        <p>Karya seni di museum ini diletakkan di empat bangunan berbeda di komplek museum. Untuk dapat melihat semua hasil seni di museum ini, setidaknya anda harus meluangkan waktu kurang lebih 2 jam. Koleksi lukisan mulai dari gaya lukis Batuan, gaya lukis Sanur, gaya lukis Ubud.</p>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/puri-lukisan-museum-ubud.jpg"></section>
     </article>
   </body>
   <script src="build/build.js"></script>
