Pura Gunung Lebah - update file sampai selesai

--- a/public html/15. Pura Gunung Lebah.html
+++ b/public html/15. Pura Gunung Lebah.html
@@ -27,6 +27,28 @@
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">
         <p>Awal terbentuknya desa Ubud dimulai dari didirikannya pemukiman penduduk di dekat pura Gunung Lebah. Karena di daerah sungai Campuhan banyak terdapat jenis tanaman yang dapat digunakan sebagai obat, Maka desa ini disebut Ubud yang berasal dari kata Ubad, artinya Obat.</p>
       </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <h2>Asal Usul Nama Pura</h2>
+        <p>Nama dari Pura Gunung Lebah, berasal dari gunung yang artinya bukit sedangkan lebah artinya lembah. Jadi arti nama dari pura ini adalah bukit kecil yang anda di lembah sungai Campuhan Ubud. Bukit kecil yang ada di lembah sungai Campuhan adalah pertemuan dua arus sungai, yaitu arus sungai Oos yang berasal dari kata Usada (bahasa halus Bali untuk obat) dan arus sungai Cerik (sungai kecil).</p>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <p>Pura Gunung Lebah dikelilingi oleh pepohonan yang sangat rimbun dan suasananya sangat tenang, karena itu pura ini digunakan sebagai tempat meditasi. Suasana asri, indahnya arsitektur pura serta lokasinya dekat dengan tempat wisata di Ubud, maka pura ini sangat disukai wisatawan asing untuk berkunjung.</p>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <p>Dewa yang dipuja di Pura ini adalah Dewa Danuring Gunung Batur dan pura ini memiliki peran dalam penyelenggaraan upacara pemberisihan alam yang diadakan setiap 100 tahun. Setiap diadakannya upacara piodalan (upacara reguler) di pura ini, akan dipentaskan kesenian tari Calonarang pura Gunung Lebah. </p>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/Pura-Gunung-Lebah-Bali.jpg"></section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <h2>Cara Terbaik Wisata Ke Pura Gunung Lebah &#45 Tempat Wisata Ubud</h2>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <p>Saat anda wisata di Bali dan menginap di Ubud, maka menggunakan taksi salah satu cara terbaik untuk berkunjung ke pura ini. Lalu jika anda tidak menginap di Ubud saat wisata di Bali, maka menggunakan taksi bukanlah pilihan yang tepat. Karena biaya transfortasi akan menjadi mahal.</p>
+        <p>Untuk wisata di Ubud, bagi yang tidak menginap di Ubud, menggunakan jasa sewa mobil + driver di Bali adalah cara terbaik. Karena driver anda akan menunggu dan anda tidak membayar berdasarkan argo tapi durasi pemakaian. Selain itu, anda tidak perlu memikirkan akan mencari tempat parkir.</p>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <p>Kelebihan lain mengunakan jasa sewa mobil plus sopir di Bali, selain biaya yang lebih murah serta durasi pemakaian yang lebih lama. Selama waktu penggunaan, anda dapat mengunjungi tempat wisata di Ubud yang lain, seperti Monkey Forest Ubud.</p>
+        <p>Jika anda berencana untuk datang menggunakan kendaran sendiri, tentunya anda akan memerlukan peta pentunjuk arak untuk mencari lokasi dari pura ini. Klik disini untuk melihat peta lokasi dari Pura Gunung Lebah Campuhan.</p>
+      </section>
     </article>
   </body>
   <script src="build/build.js"></script>
