Museum Blanco Ubud - Awal sampai sejarah antonio blanco

--- a/public html/17. Museum Blanco Ubud.html
+++ b/public html/17. Museum Blanco Ubud.html
@@ -8,6 +8,23 @@
   </head>
   <body>
     <article>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <h1>Museum Blanco Ubud</h1><img src="images/Museum-Blanco-Ubud.jpg" width="200" class="big">
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">       
+        <p>Wisata di Bali tidak akan lengkap rasanya jika tidak wisata ke Ubud Bali. Tempat wisata di Ubud salah satu favorit wisatawan terutama wisatawan mancanegara untuk berlibur. Tempat wisata ini menawarkan beranekaragam aktivitas wisata yang berbeda dengan tempat wisata fovorit lainya di Bali.Aktivitas wisata yang dapat anda lakukan di Ubud seperti wisata rafting di sungai Ayung, melihat pemandangan sawah terasering di Tegallalang dan tentunya menonton pentas kesenian tari dan melihat karya seni lukis seniman terkenal.</p>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <p>Tempat wisata di Ubud, lebih cocok bagi wisatawan yang ingin wisata ke daerah pedesaan dengan suasana tenang dengan lingkungan alam yang masih asri. Jika anda liburan bersama anak-anak, tentunya Ubud bukan tempat wisata yang cocok buat liburan untuk anak-anak anda. Tempat wisata Kuta, lebih cocok untuk liburan bersama anak di Bali atau wisata bahari di pantai Tanjung benoa dengan mencoba watersport di Tanjung Benoa. Sebagian besar para pepcinta seni lukis, selalu menyempatkan diri untuk liburan ke Ubud. Karena di tempat wisata Ubud, terdapat banyak museum yang menawarkan koleksi lukisan dari pelukis terkenal mancanegara dan pelukis Indonesia. Salah satu museum yang sangat terkenal di Ubud adalah Museum Blanco Ubud.</p>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/antonio-blanco-museum-ubud.jpg" height="250" width="600" class="big"></section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <h3>Sejarah Museum Antonio Blanco Ubud Bali</h3>
+        <p> Pelukis keturunan Spanyol dan Amerika bernama Mario Antonio Blanco, sangat terkenal dengan karya seni yang menggambarkan wanita. Pada tahun 1953, dia menikahi seorang penari Bali dan menggunakan istrinya sebagai model lukisan yang bernama Ni Ronji. Pemilik museum Blanco di Ubud adalah seorang pria kelahiran Manila, Filipina 15 September 1912, membangun sebuah rumah sekaligus museum di atas tanah pemberian Raja Ubud dari Puri Saren, Tjokorde Gde Agung Sukawati.</p>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <p>Meseum yang terletak di areal perbukitan sungai Campuhan Ubud, setiap hari museum ini tidak pernah sepi pengunjung. Sekitar 100 orang sampai 150 orang wisatawan lokal maupun mancanegara, tertarik melihat hasil karya sang maestro. Menurut wisatawan dari Spayol, Amerika Serikat, Rusia, Jepang dan Australia yang datang ke Museum Blanco Ubud, karya lukis Antonio Blanco memiliki nilai seni yang tinggi terhadap kehidupan orang Bali.</p><img src="images/antonio-blanco.jpg">
+      </section>
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">       
         <h2>Penghargaan Terhadap Antonio Blanco</h2>
         <p>Antonio Blanco menerima banyak penghargaan akan hasil karya seninya, seperti Tiffany Fellowship (sebuah penghargaan khusus dari perkumpulan Artist di Honolulu Hawai), penghargaan Chevalier du Sahametrai di Kamboja, penghargaan dari presiden Soekarno dan hadiah Seni Kritik di Spanyol. Antonio Blaco juga mendapatkan penghargaan dari Raja Spanyol yang pada saat itu Juan Carlos I, dengan memberikan gelar >>Don<< di depan namanya.</p>
