Museum Neka Ubud Bali - update file sampai selesai

--- a/public html/16. Museum Neka Ubud Bali.html
+++ b/public html/16. Museum Neka Ubud Bali.html
@@ -27,12 +27,38 @@
       <section data-bespoke-backdrop="emphatic" class="emphatic-text"><img src="images/Museumneka.jpg" height="250" width="600" class="big"></section>
       <section data-bespoke-backdrop="emphatic" class="emphatic-text">
         <h3>Jam Buka Museum Dan Biaya Tiket Masuk</h3>
-        <p>Tiket masuk akan dikenakan sebesar Rp 50.000, untuk orang dewasa dan anak-anak di bawah 12 tahun gratis. Untuk jam buka dapat anda lihat di bawah ini.</p>
+        <p class="bullet">Tiket masuk akan dikenakan sebesar Rp 50.000, untuk orang dewasa dan anak-anak di bawah 12 tahun gratis. Untuk jam buka dapat anda lihat di bawah ini.</p>
         <ulcircle>
           <li>Senin-Sabtu 09:00 - 17.00</li>
           <li>Minggu 13:00 - 17.00</li>
           <li>Hari Libur National tutup</li>
         </ulcircle>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <h2>Tempat Lukisan Pelukis Affandi</h2>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <p class="bullet">Museum Neka salah satu tempat di Bali untuk dapat melihat lukisan karya Affandi. Terdapat dua lukisan karya Affandi di museum Neka Ubud, yaitu:</p>
+        <ol>
+          <li>Lukisan Tari Barong & Rangda, tahun 1973. Dengan ukuran lukisan 100 x 185 cm.</li>
+          <li>Lukisan Perahu Nelayan, tahun 1975. Dengan ukuran lukisan 103 x 129 cm.</li>
+        </ol>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <p>Selain Affandi, museum Neka Ubud juga memamerkan lukisan dari pelukis Bagong Kussudiardjo, dengan judul lukisan Penari, dibuat pada tahun 1990, dengan ukuran lukisan 143 x 295 cm.</p>
+        <p>Sumber data dari, <a href = "http://www.museumneka.com/default.asp">Museum Neka</a>.</p>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <h2>Cara Terbaik Mengunjungi Museum Neka Ubud Bali</h2>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <p>Saat anda wisata di Ubud Bali, tentunya anda akan memerlukan sarana transfortasi untuk mengunjungi tempat wisata di Bali yang anda inginkan. Jika anda menginap di Ubud dan hanya ingin wisata ke satu tempat wisata di Ubud. Menggunakan taksi adalah cara terbaik. Banyak taksi yang tersedia di Ubud, jadi anda tidak akan kesusahan untuk mencari.</p>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <p>Jika anda tidak menginap di Ubud, cara terbaik untuk mengunjungi Museum Neka dan tempat wisata lain di Ubud adalah dengan menggunakan jasa sewa mobil dan driver di Bali. Kenapa kami sarankan anda menggunakan driver. Di Ubud, untuk mencari tempat parkir, tidaklah mudah. Terkadang anda harus parkir di pinggir jalan dan sangat susah untuk mendapatkan tempat parkir. Karena itu, kami sarankan anda menggunakan jasa rental mobil dan supir di Ubud Bali. Selain Museum Neka, Ubud juga memiliki museum lain yang layak untuk anda kunjungi. Nama museumnya adalah Arma museum Ubud.</p>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <p>Jika anda tidak terlalu familiar akan tempat wisata di Ubud, kami sarakan anda untuk mencari paket Ubud Tour. Sebagain besar penyedia paket liburan di Bali, telah memasukkan biaya tiket masuk objek wisata dan makan siang. Dengan membeli paket tour ke Ubud, jadwal liburan anda terencana dan budget liburan sudah di ketahui dari awal.</p>
       </section>
     </article>
   </body>
