Tari Barong Ubud - update file jade dan html sampai selesai

--- a/public html/20. Tari Barong Ubud.html
+++ b/public html/20. Tari Barong Ubud.html
@@ -42,6 +42,57 @@
         <p>Rangda adalah sebuah sosok yang kelihatan sangat seram, karena di gunakan untuk mewakili simbul keburukan. Sedangakan Barong Ket adalah sibul kebajikan. Oleh karena itu, setiap pementasan tarian Barong Ket, pastinya akan ada pementasan Rangda. Hal ini meyimbulkan perbedaan abadi antara kebajikan dan keburukan.</p>
         <p>Untuk mengiringi tari Barong di Ubud digunakan musik traditional Bali yang disebut dengan nama Gambelan. Jenis Gambelan yang digunakan adalah Gamelan Semar Pegulingan. Bagi yang pertama kali mendengar musik Gambelan Semar pegulingan, pastinya akan terdengar aneh di telinga, tapi setelah anda melihat penari yang bergerak mengikuti irama musik Gambelan, anda pastinya akan terbiasa.</p>
       </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <h2>Apakah Di Anjurkan Menonton Bersama Anak?</h2>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <p>Jika anda liburan di Bali bersama keluarga dan anak-anak, sebelum memutuskan untuk menonton tari Barong Ubud, sebaiknya anda tanyakan dulu kepada anak, apakah mereka berani untuk menonton tari Barong Ubud atau tidak? Caranya dengan menunjukan contoh tarian Barong Ubud melalui media internet di Youtube. Dengan cara ini anda akan tahu, apakah anak anda berani menonton tari barong atau tidak. Jika anak anda tidak berani, maka anda tidak rugi telah membayar tiket masuk tari Barong Ubud, kemudian harus meninggalkan pertujukan tarian barong karena anak anda tidak berani menonton.</p>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <p>Jika anda liburan di Bali bersama keluarga dan anak-anak, sebelum memutuskan untuk menonton tari Barong Ubud, sebaiknya anda tanyakan dulu kepada anak, apakah mereka berani untuk menonton tari Barong Ubud atau tidak? Caranya dengan menunjukan contoh tarian Barong Ubud melalui media internet di Youtube. Dengan cara ini anda akan tahu, apakah anak anda berani menonton tari barong atau tidak. Jika anak anda tidak berani, maka anda tidak rugi telah membayar tiket masuk tari Barong Ubud, kemudian harus meninggalkan pertujukan tarian barong karena anak anda tidak berani menonton.</p>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <h2>Jadwal Tari Barong Di Ubud Bali</h2>
+        <p>Untuk pementasan tari Barong Ubud, tidak setiap hari diadakan, bagi yang ingin menonton tari barong yang diadakan setiap hari, maka anda harus menonton di daerah Batubulan. Untuk jadwal pementasan tarian Barong Ubud, dapat anda lihat di tabel di bawah.</p>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <table border="0" cellpadding="5" cellspacing="10">
+          <tr align="left">
+            <td>Hari</td>
+            <td>Lokasi</td>
+            <td>Jam</td>
+            <td>Harga Tiket</td>
+          </tr>
+          <tr align="left">
+            <td>Senin</td>
+            <td>Sandi Swara Wantilan</td>
+            <td>19.00 - 20.30</td>
+            <td>Rp 75.000</td>
+          </tr>
+          <tr align="left">
+            <td>Rabu</td>
+            <td>Puri Saren Ubud</td>
+            <td>19.30 - 21.00</td>
+            <td>Rp 80.000</td>
+          </tr>
+          <tr align="left">
+            <td>Kamis</td>
+            <td>Pura Dalem Ubud</td>
+            <td>19.30 - 21.00</td>
+            <td>Rp 50.000</td>
+          </tr>
+          <tr align="left">
+            <td>Jumat</td>
+            <td>Puri Saren Ubud</td>
+            <td>19.30 - 21.00</td>
+            <td>Rp 80.000</td>
+          </tr>
+        </table>
+        <p>Catatan: Harga Tiket Pertunjukan Tari Barong Di Ubud, Sewaktu-waktu Dapat Berubah.</p>
+      </section>
+      <section data-bespoke-backdrop="emphatic" class="emphatic-text">
+        <p>Jika anda ingin menonton tarian Barong di Bali dan tidak berencana sebelumnya, sebaiknya tanyakan terlebih dahulu mengenai lokasi pementasan dan harga tiket ke supir yang mengantar anda atau melalui media informasi yang disediakan di tempat anda menginap.</p>
+      </section>
     </article>
   </body>
   <script src="build/build.js"></script>
